@@ -7,6 +7,7 @@ Packetfence supports the following access points and wireless controlers:
 - Cisco 1130AG
 - Cisco 1240AG
 - Cisco 1250
+- Cisco Wireless Services Module (WiSM)
 - Cisco WLC 2106
 - Cisco WLC 4400
 - Dlink DWS_3026
