@@ -1,0 +1,58 @@
+package pf::SNMP::Cisco::WiSM;
+
+=head1 NAME
+
+pf::SNMP::Cisco::WiSM - Object oriented module to parse SNMP traps and manage 
+Cisco Wireless Services Module (WiSM)
+
+=head1 STATUS
+
+It should work on all 6500 WiSM modules and maybe 7500.
+
+=cut
+
+use strict;
+use warnings;
+use diagnostics;
+use Log::Log4perl;
+use Net::SNMP;
+use base ('pf::SNMP::Cisco::Controller_4400_4_2_130');
+
+=head1 BUGS AND LIMITATIONS
+
+=over
+
+Nothing was brought up to our attention.
+
+=back
+
+=head1 AUTHOR
+
+Olivier Bilodeau <obilodeau@inverse.ca>
+
+=head1 COPYRIGHT
+
+Copyright (C) 2010 Inverse inc.
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+USA.
+
+=cut
+
+1;
+
+# vim: set shiftwidth=4:
+# vim: set expandtab:
+# vim: set backspace=indent,eol,start:
